--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/twistedstream/singleton-process",
   "dependencies": {
-    "mongodb": "~1.3.23",
     "moment": "^2.5.1",
-    "rsvp": "^3.0.6",
-    "proxyquire": "~0.5.3"
+    "mongodb": "^2.0.31",
+    "proxyquire": "^1.4.0",
+    "rsvp": "^3.0.6"
   },
   "devDependencies": {
+    "chai": "^2.3.0",
     "jshint": "^2.4.4",
-    "chai": "^1.9.1",
-    "mocha": "^1.18.2"
+    "mocha": "^2.2.4"
   }
 }
